<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/summer_night" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="45dp"
        tools:context="org.tomato1.sleepwell.MainActivity" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/player_background"
            android:orientation="vertical"
            android:padding="5dp" >

            <!-- pick time -->

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="10dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="@string/duration"
                    android:textColor="@color/text_color"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/timer_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/abc_spinner_ab_holo_dark"
                    android:paddingRight="15dp"
                    android:text="23:24"
                    android:textColor="@color/text_color"
                    android:textSize="18sp" />
            </LinearLayout>

            <!-- select music instruction -->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="30dp"
                android:text="@string/select_sound_instruction"
                android:textColor="@color/text_color"
                android:textSize="18sp" />

            <!-- item6 -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/meditation_play_button5"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginLeft="0dp"
                    android:background="@drawable/play_btn" />

                <TextView
                    android:id="@+id/meditation_item_name5"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:paddingLeft="6dp"
                    android:text="@string/mediation"
                    android:textColor="@color/text_color" />

                <SeekBar
                    android:id="@+id/meditation_item_seek_bar5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>

            <!-- item1 -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/rain_play_button"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginLeft="0dp"
                    
                    android:background="@drawable/play_btn" />

                <TextView
                    android:id="@+id/rain_item_name"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:paddingLeft="6dp"
                    android:text="@string/rain"
                    android:textColor="@color/text_color" />

                <SeekBar
                    android:id="@+id/rain_item_seek_bar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>

            <!-- item2 -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/bird_song_play_button2"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginLeft="0dp"
                    
                    android:background="@drawable/play_btn" />

                <TextView
                    android:id="@+id/bird_song_item_name2"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:paddingLeft="6dp"
                    android:text="@string/bird_song"
                    android:textColor="@color/text_color" />

                <SeekBar
                    android:id="@+id/bird_song_item_seek_bar2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>

            <!-- item3 -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/wind_play_button3"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginLeft="0dp"
                    
                    android:background="@drawable/play_btn" />

                <TextView
                    android:id="@+id/wind_item_name3"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:paddingLeft="6dp"
                    android:text="@string/wind"
                    android:textColor="@color/text_color" />

                <SeekBar
                    android:id="@+id/wind_item_seek_bar3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>

            <!-- item4 -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/waves_play_button4"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginLeft="0dp"
                    
                    android:background="@drawable/play_btn" />

                <TextView
                    android:id="@+id/waves_item_name4"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:paddingLeft="6dp"
                    android:text="@string/waves"
                    android:textColor="@color/text_color" />

                <SeekBar
                    android:id="@+id/waves_item_seek_bar4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>

            <!-- item5 -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/guitar_piano_play_button5"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginLeft="0dp"
                    
                    android:background="@drawable/play_btn" />

                <TextView
                    android:id="@+id/guitar_piano_item_name5"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:paddingLeft="6dp"
                    android:text="@string/guitar_piano"
                    android:textColor="@color/text_color" />

                <SeekBar
                    android:id="@+id/guitar_piano_item_seek_bar5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
<fragment
        android:id="@+id/adFragment"
        android:name="org.tomato1.sleepwell.MainActivity$AdFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"></fragment>
</RelativeLayout>